--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
+  },
+  "engines": {
+    "node": ">=24.x"
   }
 }
